--- a/mini3/subway/templates/subway/line3.html
+++ b/mini3/subway/templates/subway/line3.html
@@ -142,7 +142,13 @@
         trainMarker.style.top = `${markerY}px`;
         trainMarker.style.transform = `translate(-50%, -50%) scale(${scaleX})`;
     
-        console.log(`Station: ${station}, Direction: ${direction}`);
+        // console.log(`Station: ${station}, Direction: ${direction}`);
+        // console.log('imgrect_height:', imgRect.height);
+        // console.log('imgrect_width:', imgRect.width);
+        // console.log('imgrect_naturalwidth:', imgRect.naturalWidth);
+        // console.log('imgrect_naturalHeight:', imgRect.naturalHeight);
+        // console.log('containerRect_width:', containerRect.width);
+        // console.log('containerRect_height:', containerRect.height);
     
         // // 역 범위에 따라 마커 이미지를 변경합니다.
         if (direction === 'up') {
