임시 데이터 삽입 및 상, 하행에 열차 여러번 돌 수 있도록 함

--- a/mini3/subway/templates/base.html
+++ b/mini3/subway/templates/base.html
@@ -22,7 +22,9 @@
             transform: translateY(-55%); /* 얼마나 겹칠지 */
             box-shadow: 3px 3px 7px rgb(183, 185, 185), -3px -3px 7px rgb(183, 185, 185);
             z-index: 1000;
-            position: relative;
+            position: fixed;
+            top: 15.5%;
+            left: 34%;
         }
         
         .header {
